--- a/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
+++ b/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
@@ -1,4 +1,8 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls"
+	xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
 	<SolidColorBrush x:Key="SolidColorBrush_BFF">#ff000000</SolidColorBrush>
 
@@ -82,6 +86,118 @@
 	</Style>
 
 	<Style BasedOn="{StaticResource TabControl_Default}" TargetType="TabControl" />
+
+	<Style x:Key="CustomTabItem" TargetType="TabControl">
+		<Setter Property="SnapsToDevicePixels" Value="True" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type TabControl}">
+					<Grid KeyboardNavigation.TabNavigation="Local">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="*" />
+						</Grid.RowDefinitions>
+						<TabPanel
+							x:Name="HeaderPanel"
+							Grid.Row="0"
+							Margin="0,0,0,-1"
+							Panel.ZIndex="1"
+							IsItemsHost="True" />
+						<Border
+							x:Name="Border"
+							Grid.Row="1"
+							BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"
+							BorderThickness="1,1,1,1"
+							KeyboardNavigation.DirectionalNavigation="Contained"
+							KeyboardNavigation.TabIndex="2"
+							KeyboardNavigation.TabNavigation="Local">
+							<ContentPresenter Margin="0" ContentSource="SelectedContent" />
+						</Border>
+					</Grid>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+		<Style.Resources>
+			<JcControls:TabIndexConverter x:Key="TabIndexConverter" />
+			<Style TargetType="TabItem">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="TabItem">
+							<Border Name="TiBorder" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1,1,1,1">
+								<ContentPresenter
+									Name="TiContent"
+									HorizontalAlignment="Center"
+									VerticalAlignment="Center"
+									ContentSource="Header" />
+							</Border>
+							<ControlTemplate.Triggers>
+								<MultiDataTrigger>
+									<MultiDataTrigger.Conditions>
+										<Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False" />
+										<Condition Binding="{Binding Converter={StaticResource TabIndexConverter}, RelativeSource={RelativeSource Self}}" Value="First" />
+									</MultiDataTrigger.Conditions>
+									<MultiDataTrigger.Setters>
+										<Setter TargetName="TiBorder" Property="BorderThickness" Value="1,1,1,1" />
+									</MultiDataTrigger.Setters>
+								</MultiDataTrigger>
+								<MultiDataTrigger>
+									<MultiDataTrigger.Conditions>
+										<Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True" />
+										<Condition Binding="{Binding Converter={StaticResource TabIndexConverter}, RelativeSource={RelativeSource Self}}" Value="FirstSelected" />
+									</MultiDataTrigger.Conditions>
+									<MultiDataTrigger.Setters>
+										<Setter TargetName="TiBorder" Property="BorderThickness" Value="1,1,1,0" />
+									</MultiDataTrigger.Setters>
+								</MultiDataTrigger>
+								<MultiDataTrigger>
+									<MultiDataTrigger.Conditions>
+										<Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="False" />
+										<Condition Binding="{Binding Converter={StaticResource TabIndexConverter}, RelativeSource={RelativeSource Self}}" Value="" />
+									</MultiDataTrigger.Conditions>
+									<MultiDataTrigger.Setters>
+										<Setter TargetName="TiBorder" Property="BorderThickness" Value="0,1,1,1" />
+									</MultiDataTrigger.Setters>
+								</MultiDataTrigger>
+								<MultiDataTrigger>
+									<MultiDataTrigger.Conditions>
+										<Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="True" />
+										<Condition Binding="{Binding Converter={StaticResource TabIndexConverter}, RelativeSource={RelativeSource Self}}" Value="Selected" />
+									</MultiDataTrigger.Conditions>
+									<MultiDataTrigger.Setters>
+										<Setter TargetName="TiBorder" Property="BorderThickness" Value="0,1,1,0" />
+									</MultiDataTrigger.Setters>
+								</MultiDataTrigger>
+								<Trigger Property="IsSelected" Value="True">
+									<Setter TargetName="TiContent" Property="Margin" Value="6,3,6,4" />
+									<Setter TargetName="TiBorder" Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
+								</Trigger>
+								<Trigger Property="IsSelected" Value="False">
+									<Setter TargetName="TiContent" Property="Margin" Value="6,3,6,3" />
+									<Setter TargetName="TiBorder" Property="Background">
+										<Setter.Value>
+											<LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+												<GradientStop Offset="0" Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
+												<GradientStop Offset="1" Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}" />
+											</LinearGradientBrush>
+										</Setter.Value>
+									</Setter>
+								</Trigger>
+								<MultiTrigger>
+									<MultiTrigger.Conditions>
+										<Condition Property="IsMouseOver" Value="True" />
+										<Condition Property="IsSelected" Value="False" />
+									</MultiTrigger.Conditions>
+									<MultiTrigger.Setters>
+										<Setter TargetName="TiBorder" Property="Background" Value="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}" />
+									</MultiTrigger.Setters>
+								</MultiTrigger>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+		</Style.Resources>
+	</Style>
 
 	<!--  TextBox  -->
 
