--- a/x360ce.App.Beta/App.xaml
+++ b/x360ce.App.Beta/App.xaml
@@ -6,6 +6,7 @@
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/x360ce.Engine;component/JocysCom/Controls/Themes/Default.xaml" />
 				<ResourceDictionary Source="/x360ce.Engine;component/JocysCom/Controls/Themes/Icons.xaml" />
 				<ResourceDictionary Source="Resources/Icons/Icons_Default.xaml" />
 			</ResourceDictionary.MergedDictionaries>
