--- a/x360ce.App.Beta/Controls/PadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadControl.xaml
@@ -8,7 +8,7 @@
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="*" />
+			<RowDefinition Height="*" MinHeight="100" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
