--- a/x360ce.App.Beta/Controls/PadItem_DInputControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DInputControl.xaml
@@ -4,6 +4,8 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	d:DesignHeight="300"
+	d:DesignWidth="740"
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.RowDefinitions>
@@ -311,7 +313,6 @@
 		<TabControl
 			Name="DeviceDetailsTabControl"
 			Grid.Row="2"
-			Height="Auto"
 			Margin="0,8,0,0"
 			TabStripPlacement="Top">
 			<TabItem Name="DiObjectsTabPage" Header="Device Objects">
@@ -376,6 +377,5 @@
 				</DataGrid>
 			</TabItem>
 		</TabControl>
-
 	</Grid>
 </UserControl>
